--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@faker-js/faker": "^8.4.1",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.16.1",
