--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@faker-js/faker": "^8.4.1",
+    "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.16.1",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
