--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@faker-js/faker": "^8.4.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.16.1",
@@ -21,6 +22,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.4.3"
