--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.16.1",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "gantt-schedule-timeline-calendar": "^3.35.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
